--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,30 @@
-name: Tests
+# name: Tests
 
-on: [push, pull_request]
+# on: [push, pull_request]
 
-jobs:
-  x64-ubuntu:
-    name: X64-ubuntu
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
-      - run: date +%F > todays-date
-      - name: Restore cache for today's nightly.
-        uses: actions/cache@v2
-        with:
-          path: |
-            _neovim
-          key: ${{ runner.os }}-x64-${{ hashFiles('todays-date') }}
+# jobs:
+#   x64-ubuntu:
+#     name: X64-ubuntu
+#     runs-on: ubuntu-20.04
+#     steps:
+#       - uses: actions/checkout@v2
+#       - run: date +%F > todays-date
+#       - name: Restore cache for today's nightly.
+#         uses: actions/cache@v2
+#         with:
+#           path: |
+#             _neovim
+#           key: ${{ runner.os }}-x64-${{ hashFiles('todays-date') }}
 
-      - name: Prepare
-        run: |
-          sudo apt-get install ripgrep
-          mkdir -p ~/.local/share/nvim/site/pack/vendor/start
-          git clone --depth 1 https://github.com/nvim-lua/plenary.nvim ~/.local/share/nvim/site/pack/vendor/start/plenary.nvim
-          git clone --depth 1 https://github.com/nvim-lua/popup.nvim ~/.local/share/nvim/site/pack/vendor/start/popup.nvim
-          ln -s $(pwd) ~/.local/share/nvim/site/pack/vendor/start
-      - name: Run tests
-        run: |
-          curl -OL https://raw.githubusercontent.com/norcalli/bot-ci/master/scripts/github-actions-setup.sh
-          source github-actions-setup.sh nightly-x64
-          make test
+#       - name: Prepare
+#         run: |
+#           sudo apt-get install ripgrep
+#           mkdir -p ~/.local/share/nvim/site/pack/vendor/start
+#           git clone --depth 1 https://github.com/nvim-lua/plenary.nvim ~/.local/share/nvim/site/pack/vendor/start/plenary.nvim
+#           git clone --depth 1 https://github.com/nvim-lua/popup.nvim ~/.local/share/nvim/site/pack/vendor/start/popup.nvim
+#           ln -s $(pwd) ~/.local/share/nvim/site/pack/vendor/start
+#       - name: Run tests
+#         run: |
+#           curl -OL https://raw.githubusercontent.com/norcalli/bot-ci/master/scripts/github-actions-setup.sh
+#           source github-actions-setup.sh nightly-x64
+#           make test
